fix broken input story

--- a/stories/Input/InputExtendedExample.st.css
+++ b/stories/Input/InputExtendedExample.st.css
@@ -4,10 +4,9 @@
 }
 
 .root {
-  --inputBackgroundColor: '"opacity(color(color-1), 0)"';
+  --inputBackgroundColor: '"color(color-1)"';
   --inputTextColor: '"color(color-5)"';
 
-  -st-extends: TPAInput;
   -st-mixin: TPAInput(
           MainBackgroundColor '"opacity(color(--inputBackgroundColor), 0.2)"',
           MainTextColor '"color(--inputTextColor)"'
